# doni

./: .dockerignore  .gitignore  Jenkinsfile  Makefile  README.md  docker-compose.yml  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: build.yml  lint.yml  test.yml
docker/: Dockerfile  start_server.sh
doni/: __init__.py  config.py  flask.py  monitor.py
doni/api/: availability_window.py  hardware.py  hooks.py  root.py  utils.py
doni/cmd/: api.py  dbsync.py  import.py  importer.py  worker.py
doni/common/: args.py  config.py  context.py  driver_factory.py  exception.py  keystone.py  policy.py  rpc.py  service.py  wsgi.py
doni/common/policies/: __init__.py  base.py  hardware.py
doni/conf/: __init__.py  api.py  auth.py  default.py  opts.py  worker.py
doni/db/: alembic.ini  api.py  migration.py  models.py
doni/db/alembic/: README  env.py
doni/db/alembic/versions/: 4c500cc3c90d_hardware_soft_delete.py  555d45feb411_initial_migration.py  868606f1faff_migrate_blazar_worker_state.py  8e1686ce62a0_task_on_delete_tascade.py  f42680f49a77_hardware_loosen_name_constraint.py
doni/db/sqlalchemy/: alembic.ini  api.py  migration.py
doni/driver/: hardware_type.py  util.py
doni/driver/hardware_type/: baremetal.py  base.py  device.py  fake.py  localdevice.py  workernode.py
doni/driver/worker/: __init__.py  balena.py  base.py  blazar.py  fake.py  ironic.py  k8s.py  tunelo.py
doni/driver/worker/blazar/: __init__.py  device.py  physical_host.py
doni/objects/: __init__.py  availability_window.py  base.py  fields.py  hardware.py  transaction.py  worker.py  worker_task.py
doni/tests/: base.py  conftest.py
doni/tests/unit/: __init__.py  utils.py
doni/tests/unit/api/: conftest.py  test_availability_window.py  test_export.py  test_hardware.py
doni/tests/unit/common/: test_driver_factory.py
doni/tests/unit/db/: base.py  utils.py
doni/tests/unit/driver/worker/: test_blazar.py  test_ironic.py  test_tunelo.py
doni/tests/unit/driver/worker/blazar/: test_device.py  test_physical_host.py
doni/tests/unit/objects/: conftest.py  test_hardware.py  test_worker_task.py  utils.py
doni/tests/unit/worker/: test_manager.py
doni/worker/: __init__.py  manager.py
etc/doni/: rootwrap.conf
etc/doni/rootwrap.d/: doni.filters
tools/config/: doni-config-generator.conf
tools/policy/: doni-policy-generator.conf
