
[tool.black]
# Set line length explicitly.
# See https://black.readthedocs.io/en/stable/the_black_code_style.html#line-length for more details
line-length = 88

[tool.poetry]
authors = [
  "Jason Anderson <jasonanderson@uchicago.edu>"
]
description = "Chameleon hardware registration and enrollment service"
name = "doni"
version = "0.0.1"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
gunicorn = "^20.0.4"
"oslo.config" = "^8.4.0"
"oslo.db" = "^8.5.0"
stevedore = "^3.3.0"
"oslo.log" = "^4.4.0"
osprofiler = "^3.4.0"
"oslo.service" = "^2.4.0"
"oslo.messaging" = "^12.7.0"
"oslo.versionedobjects" = "^2.4.0"
alembic = "^1.5.4"
"oslo.middleware" = "^4.1.1"
keystonemiddleware = "^9.2.0"
"oslo.policy" = "^3.6.2"
jsonschema = "^3.2.0"
jsonpatch = "^1.28"
"oslo.reports" = "^2.2.0"
futurist = "^2.3.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
pytest = "^6.2.2"
oslotest = "^4.4.1"
pytest-watch = "^4.2.0"
pytest-mock = "^3.5.1"

[tool.poetry.scripts]
doni-dbsync = "doni.cmd.dbsync:main"

[tool.poetry.plugins."doni.database.migration_backend"]
sqlalchemy = "doni.db.migration"

[tool.poetry.plugins."doni.driver.hardware_type"]
fake-hardware = "doni.driver.hardware_type:Fake"
baremetal = "doni.driver.hardware_type:Baremetal"

[tool.poetry.plugins."doni.driver.worker_type"]
"blazar.physical_host" = "doni.driver.worker.blazar:BlazarPhysicalHostWorker"
ironic = "doni.driver.worker.ironic:IronicWorker"

[tool.poetry.plugins."oslo.config.opts"]
doni = "doni.conf.opts:list_opts"

[tool.poetry.plugins."oslo.config.opts.defaults"]
doni = "doni.conf.opts:update_opt_defaults"

[tool.poetry.plugins."oslo.policy.enforcer"]
doni = "doni.common.policy:get_oslo_policy_enforcer"

[tool.poetry.plugins."oslo.policy.policies"]
"doni.api" = "doni.common.policy:list_policies"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.flake8]
# line length is intentionally set to 80 here because black uses Bugbear
# See https://black.readthedocs.io/en/stable/the_black_code_style.html#line-length for more details
max-line-length = 80
# Enable bugbear opinionated warnings for line length
select = ["C","E","F","W","B","B950"]
# Ignore E501 for B950 compat
extend-ignore = ["E203", "E501", "W503"]
