[tool.poetry]
authors = ["Jason Anderson <jasonanderson@uchicago.edu>"]
description = "Chameleon hardware registration and enrollment service"
name = "doni"
version = "0.0.1"
include = ["etc/doni"]
exclude = ["doni/tests"]

# All dependencies should be at minimum the value of the upper constraint
# for the targeted OpenStack release. These values are for the Train cycle:
# https://github.com/openstack/requirements/blob/stable/train/upper-constraints.txt
[tool.poetry.dependencies]
# Kolla containers currently use 3.6, this can eventually be updated to 3.8
python = "^3.6"
Flask = "^1.1.1"
importlib-metadata = [
  { version = "^0.20", python = "<3.7" },
  { version = "^1.0", python = ">=3.8" }
]
"oslo.config" = "^6.11.3"
"oslo.db" = "^5.0.2"
stevedore = "^1.31.0"
"oslo.log" = "^3.44.3"
osprofiler = "^2.8.2"
"oslo.service" = "^1.40.2"
"oslo.messaging" = "^10.2.3"
"oslo.versionedobjects" = "^1.36.1"
alembic = "^1.1.0"
"oslo.middleware" = "^3.38.1"
keystonemiddleware = "^7.0.1"
"oslo.policy" = "^2.3.4"
jsonschema = { version = "^3.0.2", extras = ["format"] }
jsonpatch = "^1.24"
"oslo.reports" = "^1.30.0"
futurist = "^1.9.0"
"oslo.rootwrap" = "^5.16.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
pytest = "^6.2.2"
oslotest = "^4.4.1"
pytest-watch = "^4.2.0"
pytest-mock = "^3.5.1"
flake8-bugbear = "^21.3.2"
isort = "^5.8.0"
pydocstyle = "^6.0.0"

[tool.poetry.scripts]
doni-api = "doni.cmd.api:main"
doni-dbsync = "doni.cmd.dbsync:main"
doni-import = "doni.cmd.importer:main"
doni-rootwrap = "oslo_rootwrap.cmd:main"
doni-worker = "doni.cmd.worker:main"

[tool.poetry.plugins."doni.database.migration_backend"]
sqlalchemy = "doni.db.migration"

[tool.poetry.plugins."doni.driver.hardware_type"]
fake-hardware = "doni.driver.hardware_type.fake:Fake"
baremetal = "doni.driver.hardware_type.baremetal:Baremetal"
"device.balena_k8s" = "doni.driver.hardware_type.device:BalenaK8sDevice"

[tool.poetry.plugins."doni.driver.worker_type"]
balena = "doni.driver.worker.balena:BalenaWorker"
"blazar.physical_host" = "doni.driver.worker.blazar.physical_host:BlazarPhysicalHostWorker"
"blazar.device" = "doni.driver.worker.blazar.device:BlazarDeviceWorker"
fake-worker = "doni.driver.worker.fake:FakeWorker"
ironic = "doni.driver.worker.ironic:IronicWorker"
tunelo = "doni.driver.worker.tunelo:TuneloWorker"

[tool.poetry.plugins."oslo.config.opts"]
doni = "doni.conf.opts:list_opts"

[tool.poetry.plugins."oslo.config.opts.defaults"]
doni = "doni.conf.opts:update_opt_defaults"

[tool.poetry.plugins."oslo.policy.enforcer"]
doni = "doni.common.policy:get_oslo_policy_enforcer"

[tool.poetry.plugins."oslo.policy.policies"]
"doni.api" = "doni.common.policy:list_policies"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.black]
# Set line length explicitly.
# See https://black.readthedocs.io/en/stable/the_black_code_style.html#line-length for more details
line-length = 88

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.isort]
known_first_party = "doni"
